schema/testdata/errors/operation_where_expression_unresolvable_rhs.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:20:56:AttributeExpressionError:undeclared reference to 'context' (in container '')
            @where(profile.identity == context.identity)
        }
    }
}
